Adapting the front-end to our needs

--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -273,30 +273,30 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg col-md-6 col-sm-6 mb-4">
-						<div class="stats-small stats-small--1 card card-small">
-							<div class="card-body p-0 d-flex">
-								<div class="d-flex flex-column m-auto">
-									<div class="stats-small__data text-center">
-										<span class="stats-small__label text-uppercase">Pages</span>
-										<h6 class="stats-small__value count my-3">182</h6>
-									</div>
-									<div class="stats-small__data">
-										<span
-											class="stats-small__percentage stats-small__percentage--increase">12.4%</span>
-									</div>
-								</div>
-								<canvas height="120" class="blog-overview-stats-small-2"></canvas>
-							</div>
-						</div>
-					</div>
+<!-- 					<div class="col-lg col-md-6 col-sm-6 mb-4"> -->
+<!-- 						<div class="stats-small stats-small--1 card card-small"> -->
+<!-- 							<div class="card-body p-0 d-flex"> -->
+<!-- 								<div class="d-flex flex-column m-auto"> -->
+<!-- 									<div class="stats-small__data text-center"> -->
+<!-- 										<span class="stats-small__label text-uppercase">Pages</span> -->
+<!-- 										<h6 class="stats-small__value count my-3">182</h6> -->
+<!-- 									</div> -->
+<!-- 									<div class="stats-small__data"> -->
+<!-- 										<span -->
+<!-- 											class="stats-small__percentage stats-small__percentage--increase">12.4%</span> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 								<canvas height="120" class="blog-overview-stats-small-2"></canvas> -->
+<!-- 							</div> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
 					<div class="col-lg col-md-4 col-sm-6 mb-4">
 						<div class="stats-small stats-small--1 card card-small">
 							<div class="card-body p-0 d-flex">
 								<div class="d-flex flex-column m-auto">
 									<div class="stats-small__data text-center">
-										<span class="stats-small__label text-uppercase">Comments</span>
-										<h6 class="stats-small__value count my-3">8,147</h6>
+										<span class="stats-small__label text-uppercase" >Number of repositories</span>
+										<h6 class="stats-small__value count my-3" id="numberOfRepositories"></h6>
 									</div>
 									<div class="stats-small__data">
 										<span
@@ -312,8 +312,8 @@
 							<div class="card-body p-0 d-flex">
 								<div class="d-flex flex-column m-auto">
 									<div class="stats-small__data text-center">
-										<span class="stats-small__label text-uppercase">Users</span>
-										<h6 class="stats-small__value count my-3">2,413</h6>
+										<span class="stats-small__label text-uppercase">Opened Issues</span>
+										<h6 class="stats-small__value count my-3" id="numberOfOpenedIssues"></h6>
 									</div>
 									<div class="stats-small__data">
 										<span
@@ -329,8 +329,8 @@
 							<div class="card-body p-0 d-flex">
 								<div class="d-flex flex-column m-auto">
 									<div class="stats-small__data text-center">
-										<span class="stats-small__label text-uppercase">Subscribers</span>
-										<h6 class="stats-small__value count my-3">17,281</h6>
+										<span class="stats-small__label text-uppercase">Closed Issues</span>
+										<h6 class="stats-small__value count my-3" id="numberOfClosedIssues"></h6>
 									</div>
 									<div class="stats-small__data">
 										<span
