adapting front-end

--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -212,14 +212,14 @@
 								</a> <a class="dropdown-item notification__all text-center" href="#">
 									View all Notifications </a>
 							</div></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle text-nowrap px-3"
-							data-toggle="dropdown" href="#" role="button"
-							aria-haspopup="true" aria-expanded="false"> <img
-								class="user-avatar rounded-circle mr-2"
-								src="images/avatars/0.jpg" alt="User Avatar"> <span
-								class="d-none d-md-inline-block">Sierra Brooks</span>
-						</a>
+<!-- 						<li class="nav-item dropdown"><a -->
+<!-- 							class="nav-link dropdown-toggle text-nowrap px-3" -->
+<!-- 							data-toggle="dropdown" href="#" role="button" -->
+<!-- 							aria-haspopup="true" aria-expanded="false"> <img -->
+<!-- 								class="user-avatar rounded-circle mr-2" -->
+<!-- 								src="images/avatars/0.jpg" alt="User Avatar"> <span -->
+<!-- 								class="d-none d-md-inline-block">Sierra Brooks</span> -->
+<!-- 						</a> -->
 							<div class="dropdown-menu dropdown-menu-small">
 								<a class="dropdown-item" href="user-profile-lite.html"> <i
 									class="material-icons">&#xE7FD;</i> Profile
@@ -382,27 +382,27 @@
 					<div class="col-lg-4 col-md-6 col-sm-12 mb-4">
 						<div class="card card-small h-100">
 							<div class="card-header border-bottom">
-								<h6 class="m-0">Users by device</h6>
+								<h6 class="m-0"></h6>
 							</div>
 							<div class="card-body d-flex py-0">
 								<canvas height="220" class="blog-users-by-device m-auto"></canvas>
 							</div>
-							<div class="card-footer border-top">
-								<div class="row">
-									<div class="col">
-										<select class="custom-select custom-select-sm"
-											style="max-width: 130px;">
-											<option selected>Last Week</option>
-											<option value="1">Today</option>
-											<option value="2">Last Month</option>
-											<option value="3">Last Year</option>
-										</select>
-									</div>
-									<div class="col text-right view-report">
-										<a href="#">Full report &rarr;</a>
-									</div>
-								</div>
-							</div>
+<!-- 							<div class="card-footer border-top"> -->
+<!-- 								<div class="row"> -->
+<!-- 									<div class="col"> -->
+<!-- 										<select class="custom-select custom-select-sm" -->
+<!-- 											style="max-width: 130px;"> -->
+<!-- 											<option selected>Last Week</option> -->
+<!-- 											<option value="1">Today</option> -->
+<!-- 											<option value="2">Last Month</option> -->
+<!-- 											<option value="3">Last Year</option> -->
+<!-- 										</select> -->
+<!-- 									</div> -->
+<!-- 									<div class="col text-right view-report"> -->
+<!-- 										<a href="#">Full report &rarr;</a> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
 						</div>
 					</div>
 					<!-- End Users By Device Stats -->
@@ -535,7 +535,7 @@
 					<div class="col-lg-3 col-md-12 col-sm-12 mb-4">
 						<div class="card card-small">
 							<div class="card-header border-bottom">
-								<h6 class="m-0">Top Referrals</h6>
+								<h6 class="m-0">Companies on Github</h6>
 							</div>
 							<div class="card-body p-0">
 								<ul class="list-group list-group-small list-group-flush">
