Fixing the Pie Chart

--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -273,7 +273,7 @@
 				<!-- End Page Header -->
 				<!-- Small Stats Blocks -->
 				<div class="row">
-					<div class="col-lg col-md-6 col-sm-6 mb-4">
+					<div class="col-lg col-md-6 col-sm-3 mb-4">
 						<div class="stats-small stats-small--1 card card-small">
 							<div class="card-body p-0 d-flex">
 								<div class="d-flex flex-column m-auto">
@@ -307,7 +307,7 @@
 <!-- 							</div> -->
 <!-- 						</div> -->
 <!-- 					</div> -->
-					<div class="col-lg col-md-4 col-sm-6 mb-4">
+					<div class="col-lg col-md-4 col-sm-3 mb-4">
 						<div class="stats-small stats-small--1 card card-small">
 							<div class="card-body p-0 d-flex">
 								<div class="d-flex flex-column m-auto">
@@ -324,7 +324,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg col-md-4 col-sm-6 mb-4">
+					<div class="col-lg col-md-4 col-sm-3 mb-4">
 						<div class="stats-small stats-small--1 card card-small">
 							<div class="card-body p-0 d-flex">
 								<div class="d-flex flex-column m-auto">
@@ -341,7 +341,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg col-md-4 col-sm-12 mb-4">
+					<div class="col-lg col-md-4 col-sm-3 mb-4">
 						<div class="stats-small stats-small--1 card card-small">
 							<div class="card-body p-0 d-flex">
 								<div class="d-flex flex-column m-auto">
@@ -538,12 +538,12 @@
 			class="pp-cta extra-action"> <img
 			src="https://dgc2qnsehk7ta.cloudfront.net/uploads/sd-blog-promo-2.jpg">
 		</a>
-		<div class="pp-intro-bar">
-			Need More Templates? <span class="close"> <i
-				class="material-icons">close</i>
-			</span> <span class="up"> <i class="material-icons">keyboard_arrow_up</i>
-			</span>
-		</div>
+<!-- 		<div class="pp-intro-bar"> -->
+<!-- 			Need More Templates? <span class="close"> <i -->
+<!-- 				class="material-icons">close</i> -->
+<!-- 			</span> <span class="up"> <i class="material-icons">keyboard_arrow_up</i> -->
+<!-- 			</span> -->
+<!-- 		</div> -->
 		<div class="pp-inner-content">
 			<h2>Shards Dashboard Pro</h2>
 			<p>A premium & modern Bootstrap 4 admin dashboard template pack.</p>
