Added Google Chart js

--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -35,8 +35,31 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
-<script type="text/javascript"
-	src="https://www.gstatic.com/charts/loader.js"></script>
+ <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'Sales', 'Expenses'],
+          ['2004',  1000,      400],
+          ['2005',  1170,      460],
+          ['2006',  660,       1120],
+          ['2007',  1030,      540]
+        ]);
+
+        var options = {
+          title: 'Company Performance',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
+
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+        chart.draw(data, options);
+      }
+    </script>
 	
 </head>
 <body class="h-100">
@@ -389,8 +412,9 @@
 											Full Report &rarr;</button>
 									</div>
 								</div>
-								<canvas height="130" style="max-width: 100% !important;"
-									class="blog-overview-users"></canvas>
+								<div id="curve_chart" style="max-width: 100% !important; height: 130"></div>
+								<!--canvas height="130" style="max-width: 100% !important;"
+									class="blog-overview-users"></canvas-->
 							</div>
 						</div>
 					</div>
