--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -359,38 +359,40 @@
 						</div>
 					</div>
 				</div>
+<!-- 				<div class="col-lg-12 col-md-12 col-sm-12 mb-4" id="repoPerYear"></div> -->
 				<!-- End Small Stats Blocks -->
-				<div class="row">
+				<div class="row" >
 					<!-- Users Stats -->
 					<div class="col-lg-6 col-md-12 col-sm-12 mb-4">
 						<div class="card card-small">
 							<div class="card-header border-bottom">
-								<h6 class="m-0">Users</h6>
+								<h6 class="m-0">Numbers of repositories per year </h6>
 							</div>
+
 							<div class="card-body pt-0">
-								<div class="row border-bottom py-2 bg-light">
-									<div class="col-12 col-sm-6">
-										<div id="blog-overview-date-range"
-											class="input-daterange input-group input-group-sm my-auto ml-auto mr-auto ml-sm-auto mr-sm-0"
-											style="max-width: 350px;">
-											<input type="text" class="input-sm form-control" name="start"
-												placeholder="Start Date" id="blog-overview-date-range-1">
-											<input type="text" class="input-sm form-control" name="end"
-												placeholder="End Date" id="blog-overview-date-range-2">
-											<span class="input-group-append"> <span
-												class="input-group-text"> <i class="material-icons"></i>
-											</span>
-											</span>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 d-flex mb-2 mb-sm-0">
-										<button type="button"
-											class="btn btn-sm btn-white ml-auto mr-auto ml-sm-auto mr-sm-0 mt-3 mt-sm-0">View
-											Full Report &rarr;</button>
-									</div>
-								</div>
-								<canvas height="130" style="max-width: 100% !important;"
-									class="blog-overview-users"></canvas>
+								<!-- 								<div class="row border-bottom py-2 bg-light"> -->
+								<!-- 									<div class="col-12 col-sm-6"> -->
+								<!-- 										<div id="blog-overview-date-range" -->
+								<!-- 											class="input-daterange input-group input-group-sm my-auto ml-auto mr-auto ml-sm-auto mr-sm-0" -->
+								<!-- 											style="max-width: 350px;"> -->
+								<!-- 											<input type="text" class="input-sm form-control" name="start" -->
+								<!-- 												placeholder="Start Date" id="blog-overview-date-range-1"> -->
+								<!-- 											<input type="text" class="input-sm form-control" name="end" -->
+								<!-- 												placeholder="End Date" id="blog-overview-date-range-2"> -->
+								<!-- 											<span class="input-group-append"> <span -->
+								<!-- 												class="input-group-text"> <i class="material-icons"></i> -->
+								<!-- 											</span> -->
+								<!-- 											</span> -->
+								<!-- 										</div> -->
+								<!-- 									</div> -->
+								<!-- 									<div class="col-12 col-sm-6 d-flex mb-2 mb-sm-0"> -->
+								<!-- 										<button type="button" -->
+								<!-- 											class="btn btn-sm btn-white ml-auto mr-auto ml-sm-auto mr-sm-0 mt-3 mt-sm-0">View -->
+								<!-- 											Full Report &rarr;</button> -->
+								<!-- 									</div> -->
+								<!-- 								</div> -->
+ 								<canvas height="130" style="max-width: 100% !important;" class="blog-overview-users"></canvas>
+
 							</div>
 						</div>
 					</div>
@@ -551,7 +553,7 @@
 				href="http://bit.ly/shards-dashboard-pro">Download</a>
 		</div>
 	</div>
-	<script src="datafetching.js"></script>
+<!-- 	<script src="datafetching.js"></script> -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
 		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
